<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BasicActivity"
    android:id="@+id/parentLayout">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:id="@+id/calculator"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:id="@+id/inputNumber"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Del"
            android:id="@+id/delete"
            android:layout_below="@+id/inputNumber"
            android:layout_alignParentEnd="true"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="25dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/delete"
            android:layout_alignStart="@+id/inputNumber"
            android:id="@+id/buttons"
            android:columnCount="4"
            android:rowCount="4"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_1_1"
                android:id="@+id/button1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_1_2"
                android:id="@+id/button2"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_1_3"
                android:id="@+id/button3"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_1_4"
                android:id="@+id/button4"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:layout_alignTop="@+id/delete"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_2_1"
                android:id="@+id/button5"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_2_2"
                android:id="@+id/button6"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_2_3"
                android:id="@+id/button7"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_2_4"
                android:id="@+id/button8"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_3_1"
                android:id="@+id/button9"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_3_2"
                android:id="@+id/button10"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_3_3"
                android:id="@+id/button11"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_3_4"
                android:id="@+id/button12"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_4_1"
                android:id="@+id/button13"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_4_2"
                android:id="@+id/button14"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_4_3"
                android:id="@+id/button15"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_s_4_4"
                android:id="@+id/button16"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp" />

        </GridLayout>

    </RelativeLayout>

</RelativeLayout>
